--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -3,6 +3,7 @@
 <p>トラックのナンバー：<%= f.hidden_field :truck %><%= @order.truck %></p>
 <p>日付：<%= f.hidden_field :date %><%= @order.date %></p>
 <p>コンテナ番号：<%= f.hidden_field :cntr_number %><%= @order.cntr_number %></p>
+<p>コンテナ番号：<%= f.hidden_field :t_range %><%= @order.t_range %></p>
 <%= f.submit '戻る', name: 'back' %>
 <%= f.submit '送信する'%>
 
