--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,22 +1,45 @@
-hello world
+<%if current_user.authority.blank?%>
+<p>このサイトは限定された業者さんのみアクセス可能です。新規メールアドレスを登録した場合には、担当者までご連絡をお願いします。</p>
+<%end%>
+
+<%unless current_user.authority.blank? %>
+
+<p><%= current_user.email%>さんこんにちは。レーンBookingページへようこそ！</p>
+
 
 <%= form_for(@order, url: { action: :confirm }) do |f| %>
 <p>トラックのナンバー<%= f.text_field :truck ,:required => true%></p>
 <p>コンテナ番号<%= f.text_field :cntr_number ,:required => true%></p>
 <p>日付<%= f.date_field :date ,:required => true%></p>
-<p>日付<%= f.select :t_range, 
-[["9時から10時", "9-10"],
-["10時から11時", "10-11"],
-["11時から12時", "11-12"],
-["12時から13時", "12-13"],
-["13時から14時", "13-14"],
-["14時から15時", "14-15"],
-["15時から16時", "15-16"]], 
-:prompt => "選択してください" ,:required => true%></p>
-<p><%= f.submit '確認画面へ'%></p>
-<% end %>
+<%if current_user.authority == 2 %>
+    <p>時間帯<%= f.select :t_range, 
+    [["9時から10時", "9-10"],
+    ["10時から11時", "10-11"],
+    ["11時から12時", "11-12"],
+    ["12時から13時", "12-13"],
+    ["13時から14時", "13-14"],
+    ["14時から15時", "14-15"],
+    ["15時から16時", "15-16"]], 
+    :prompt => "選択してください" ,:required => true%></p>
+    <p><%= f.submit '確認画面へ'%></p>
+    <% end %>
+
+<%if current_user.authority == 3 %>
+    <p>時間帯<%= f.select :t_range, 
+    [["11時から12時", "11-12"],
+    ["12時から13時", "12-13"]],
+    :prompt => "選択してください" ,:required => true%></p>
+    <p><%= f.submit '確認画面へ'%></p>
+    <% end %>
+<%end%>
+
+
 
 
 <%if current_user.authority == 1 %>
 <p><%= link_to "登録ユーザー管理", "orders/authority" %></p>
 <%end%>
+
+<%end%>
+
+<%= link_to "ログアウト", destroy_user_session_path, method: "delete" %>
