記載の変更

--- a/app/views/orders/done.html.erb
+++ b/app/views/orders/done.html.erb
@@ -14,6 +14,7 @@
 <% @order.t_range = "14時から15時" if @order.t_range == "14-15" %>
 <% @order.t_range = "15時から16時" if @order.t_range == "15-16" %>
 <%= @order.t_range %></h2></center>
+<h1>※※時間内であってもタイミングによっては、すぐに入場できない場合があることを理解し、 <br>必ず守衛の支持に従います</h1>
 </div>
 
  <%= link_to "トップページ", "/" %>
