--- a/app/views/orders/authority.html.erb
+++ b/app/views/orders/authority.html.erb
@@ -1,5 +1,7 @@
 <h3>一覧</h3>
 <% @non_login_users.each do |r| %>
-<%= r.email%>
-<%= link_to '更新', "/users/#{r.id}/edit", method: :get %>
+<p><%= r.email%>
+<%= link_to '更新', "/users/#{r.id}/edit", method: :get %></p>
 <% end %>
+
+<p><%= link_to "インデックス", "/" %></p>
