--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,10 +1,29 @@
+
 <%= form_for @order, :url => orders_done_path do |f| %>
 <h2>確認</h2>
 <p>トラックのナンバー：<%= f.hidden_field :truck %><%= @order.truck %></p>
 <p>日付：<%= f.hidden_field :date %><%= @order.date %></p>
 <p>コンテナ番号：<%= f.hidden_field :cntr_number %><%= @order.cntr_number %></p>
-<p>コンテナ番号：<%= f.hidden_field :t_range %><%= @order.t_range %></p>
-<%= f.submit '戻る', name: 'back' %>
-<%= f.submit '送信する'%>
+<%= f.hidden_field :t_range %><% @order.t_range %>
+<%= f.hidden_field :purpose %><% @order.purpose %>
+<p>
 
+時間帯：<%= "９時から１０時" if @order.t_range == "9-10"%>
+<%= "10時から11時" if @order.t_range == "10-11" %>
+<%= "11時から12時" if @order.t_range == "11-12" %>
+<%= "12時から13時" if @order.t_range == "12-13" %>
+<%= "13時から14時" if @order.t_range == "13-14" %>
+<%= "14時から15時" if @order.t_range == "14-15" %>
+<%= "15時から16時" if @order.t_range == "15-16" %>
+</p>
+<p>
+種別：
+<%= "空バンPICK" if @order.purpose == 1 %>
+<%= "実入り搬入" if @order.purpose == 2 %>
+<%= "実入り搬出" if @order.purpose == 3 %>
+</p>
+<%= f.submit '戻る', name: 'back' %>
+<%= f.submit '確定する'%>
 <% end %>
+
+
