--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,6 +4,7 @@
 
 <%unless current_user.authority.blank? %>
 
+
 <p><%= current_user.email%>さんこんにちは。レーンBookingページへようこそ！</p>
 
 
@@ -11,8 +12,13 @@
 <p>トラックのナンバー<%= f.text_field :truck ,:required => true%></p>
 <p>コンテナ番号<%= f.text_field :cntr_number ,:required => true%></p>
 <p>日付<%= f.date_field :date ,:required => true%></p>
+<p>種別<%= f.select :purpose, 
+    [["空バンPICK", "1"],
+    ["実入り搬入", "2"],
+    ["実入り搬出", "3"]], 
+    :prompt => "選択してください" ,:required => true%></p>
 <%if current_user.authority == 2 %>
-    <p>時間帯<%= f.select :t_range, 
+    <p>時間帯<%= f.select :t_range,
     [["9時から10時", "9-10"],
     ["10時から11時", "10-11"],
     ["11時から12時", "11-12"],
@@ -20,7 +26,7 @@
     ["13時から14時", "13-14"],
     ["14時から15時", "14-15"],
     ["15時から16時", "15-16"]], 
-    :prompt => "選択してください" ,:required => true%></p>
+    :prompt => "選択してください" ,:required => true %></p>
     <p><%= f.submit '確認画面へ'%></p>
     <% end %>
 
