--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -15,6 +15,14 @@
 <%= "13時から14時" if @order.t_range == "13-14" %>
 <%= "14時から15時" if @order.t_range == "14-15" %>
 <%= "15時から16時" if @order.t_range == "15-16" %>
+<%= "8:00から8:30" if @order.t_range == "8-8.5" %>
+<%= "8:30から9:00" if @order.t_range == "8.5-9" %>
+<%= "9:00から9:30" if @order.t_range == "9-9.5" %>
+<%= "9:30から10:00" if @order.t_range == "9.5-10" %>
+<%= "10:00から10:30" if @order.t_range == "10-10.5" %>
+<%= "10:30から11:00" if @order.t_range == "10.5-11" %>
+<%= "11:00から11:30" if @order.t_range == "10.5-11" %>
+
 </p>
 <p>
 種別：
