--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,30 @@
-<h2>Sign up</h2>
+<h2>連絡先の登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  
+  <div class="field">
+    <%= f.label "担当者名" %><br />
+    <%= f.text_field :driver, autofocus: true  %>
+  </div>
+  
+  <div class="field">
+    <%= f.label "会社名" %><br />
+    <%= f.text_field :company, autofocus: true  %>
+  </div>
 
+  <div class="field">
+    <%= f.label "連絡先電話番号（半角英数字でハイフンなし）" %><br />
+    <%= f.text_field :phone %>
+  </div>
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label "パスワード（最低６桁）" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -17,12 +32,12 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label "パスワードの再入力（↑と同じパスワードを再度入力してください）"  %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録" %>
   </div>
 <% end %>
 
