update、delete, user_idでリレーション組んだ

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -78,4 +78,4 @@
 
 
 
-<footer><%= link_to "ログアウト", destroy_user_session_path, method: "delete" %></footer>
+<footer><%= link_to "ログアウト", destroy_user_session_path, method: "delete" %><a href="/users/<%= current_user.id %>/show">マイページ</a></footer>
