--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label "連絡先電話番号（半角英数字でハイフンなし）" %><br />
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone , autofocus: true%>
   </div>
   
   <div class="field">
